--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screen.vocabulary_detail.VocabularyDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".screen.vocabulary_detail.VocabularyDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".screen.grammar.GrammarActivity" />
         <activity android:name=".screen.grammar_detail.GrammarDetailAcvitity" />
-        <activity android:name=".screen.vocabulary.VocabularyActivity"/>
+        <activity android:name=".screen.vocabulary.VocabularyActivity" />
+        <activity android:name=".screen.exam.ExamActivity" />
+        <activity android:name=".screen.basic_test.BasicTestActivity" />
+        <activity android:name=".screen.grammar_test.GrammarTestActivity" />
     </application>
-
 </manifest>
