ref task 4793: show answer and point

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,10 @@
             android:name=".screen.main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".screen.basic_test.BasicTestActivity" />
-
         <service android:name=".screen.service.ImageService" />
         <service android:name=".screen.service.AudioService" />
+        <activity android:name=".screen.basic_test_detail.BasicTestDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
